--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shark VPN</title>
+    <title>PLH TUNNEL</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -60,7 +60,7 @@
       </br>
     </div>
     <div class="share">
-        <a href="https://t.me/share/url?url=🔰Free Unlimited VPN&text=🔰SITE: sharkvpnpanda.xyz" class="fab fa-telegram"></a>
+        <a href="https://t.me/share/url?url=🔰Free Unlimited VPN&text=🔰SITE: plhtunnel.xyz" class="fab fa-telegram"></a>
         <a href="#" class="fab fa-twitter"></a>
         <a href="#" class="fab fa-instagram"></a>
         <a href="#" class="fab fa-linkedin"></a>
